<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_glow"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/name"
        style="@style/main_title"
        android:text="@string/castello_PTA" />


    <TextView
        android:id="@+id/address"
        style="@style/body_text"
        android:layout_below="@id/name"
        android:onClick="getMap"
        android:text="@string/address" />

    <TextView
        android:id="@+id/phone_number"
        style="@style/body_text"
        android:layout_below="@id/address"
        android:onClick="dialNumber"
        android:text="@string/phone_number" />

    <TextView
        android:id="@+id/web_address"
        style="@style/body_text"
        android:layout_below="@id/phone_number"
        android:onClick="webClick"
        android:text="@string/web_address" />

    <LinearLayout style="@style/icon_row">

        <ImageView
            style="@style/icon"
            android:contentDescription="@string/instagram_description"
            android:onClick="instagramClick"
            android:src="@drawable/instagram_32" />

        <ImageView
            style="@style/icon"
            android:contentDescription="@string/facebook_description"
            android:onClick="facebookClick"
            android:src="@drawable/facebook_32" />

        <ImageView
            style="@style/icon"
            android:contentDescription="@string/amazon_smile_description"
            android:onClick="amazonClick"
            android:paddingTop="@dimen/amazon_icon_vertical_padding"
            android:src="@drawable/amazon_32" />

        <ImageView
            style="@style/icon"
            android:contentDescription="@string/play_store_description"
            android:onClick="playStoreClick"
            android:src="@drawable/play_32" />

        <ImageView
            style="@style/icon"
            android:contentDescription="@string/app_store_description"
            android:onClick="appStoreClick"
            android:src="@drawable/appstore_32" />

    </LinearLayout>

</RelativeLayout>